--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             position: absolute;
             z-index: 102;
-            top: 40%;
+            top: calc(50% - 100px);
             left: 50%;
             transition: all 0.5s;
             transform: translate(-50%, -20%);
@@ -68,7 +68,21 @@
 
             animation: move_arrow 0.5s linear infinite alternate forwards;
         }
-        @keyframes move_arrow{
+        .Capslock_alert{
+            font-size: 25px;
+            font-weight: bolder;
+
+            position: absolute;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 1;
+
+            filter: opacity(0%);
+        }
+
+
+        @keyframes move_arrow{ /* 플레이어 위치 화살표 애니메이션 */
             from {transform: translate(-50%, 0%);}
             to {transform: translate(-50%, -20%);}
         }
@@ -76,6 +90,9 @@
 </head>
 <body>
     <div id="map"></div>
+
+    <div class="Capslock_alert">Capslock 이 켜져있습니다</div>
+
     <div id="underbar">
         <div id="resultDiv">클릭한 위치의 좌표 (위도,경도) : </div>
         <div id="setUnderBar"></div>
@@ -112,13 +129,45 @@
             resultDiv.innerHTML = message;
         });
 
-        var people1 = new kakao.maps.Circle({
+        var people = new kakao.maps.Circle({
             center : new kakao.maps.LatLng(peopleX, peopleY),  // 원의 중심좌표
             radius: 5, // 미터 단위의 원의 반지름
             strokeOpacity: 0, // 선의 불투명도 1에서 0 사이의 값이며 0에 가까울수록 투명
             fillColor: 'green', // 채우기 색깔
             fillOpacity: 1  // 채우기 불투명도
         });
+
+        
+        // var people = new kakao.maps.Circle({
+        //         center : new kakao.maps.LatLng(peopleX, peopleY),  // 원의 중심좌표
+        //         radius: 5, // 미터 단위의 원의 반지름
+        //         strokeOpacity: 0, // 선의 불투명도 1에서 0 사이의 값이며 0에 가까울수록 투명
+        //         fillColor: 'green', // 채우기 색깔
+        //         fillOpacity: 1  // 채우기 불투명도
+        //     });
+
+        // const NumOfPeople = 1; //사람 수
+        // var peoples = [];
+
+        // for(let i = 0; i < NumOfPeople; i++){
+        //     displayPeo(peoples[i]);
+        // }
+
+        // function displayPeo(popular){
+        //     var people = new kakao.maps.Circle({
+        //         center : new kakao.maps.LatLng(peopleX, peopleY),  // 원의 중심좌표
+        //         radius: 5, // 미터 단위의 원의 반지름
+        //         strokeOpacity: 0, // 선의 불투명도 1에서 0 사이의 값이며 0에 가까울수록 투명
+        //         fillColor: 'green', // 채우기 색깔
+        //         fillOpacity: 1  // 채우기 불투명도
+        //     });
+
+        //     console.log(people)
+        //     people.setMap(map);
+            
+        //     // kakao.maps.event.addListener(peoples, 'click', function(mouseEvent){
+        //     // });
+        // }
 
         var ANSANrange = [ // 안산시 범위 다각형
             new kakao.maps.LatLng(37.345366013401176, 126.78333668729309),
@@ -142,37 +191,42 @@
         var polygon = new kakao.maps.Polygon({
             path:ANSANrange,
             strokeWeight: 3,
-            strokeColor: '#000000', 
+            strokeColor: '#000000',
             strokeOpacity: 0.8,
             fillOpacity: 0
         });
 
         // 안산 범위 다각형 표시
         polygon.setMap(map);
-        // 원 표시
-        people1.setMap(map);
-
+        //사람(원)표시
+        people.setMap(map);
 
         const mylocate = document.querySelector('.mylocate');
+        const Capslock_alert = document.querySelector('.Capslock_alert');
 
         let moveOpts = {
             key: '',
             d: null
         }
+
         let panto = false;
         var moveLatLng = new kakao.maps.LatLng(peopleX, peopleY);
 
         window.onkeydown = (evt) =>{
-            evt.preventDefault();
-            if(['w', 'a', 's', 'd'].includes(evt.key)){
-                if((Math.abs(peopleX - map.getCenter().getLat()) > 0.00005 || Math.abs(peopleY - map.getCenter().getLng()) > 0.00005) && panto == false){
-                    console.log("panto!")
-                    map.panTo(moveLatLng)
-                    moveOpts.key = evt.key;
-                    moveOpts.d = new Date();
-                    panto = true;
-                }else{
-                    moveOpts.key = evt.key;
+            if(evt.getModifierState("CapsLock") == true){
+                Capslock_alert.style.filter = 'opacity(100%)';
+            }else{
+                Capslock_alert.style.filter = 'opacity(0%)';
+                if(['w', 'a', 's', 'd'].includes(evt.key)){
+                    if((Math.abs(peopleX - map.getCenter().getLat()) > 0.00005 || Math.abs(peopleY - map.getCenter().getLng()) > 0.00005) && panto == false){
+                        console.log("panto!");
+                        map.panTo(moveLatLng);
+                        moveOpts.key = evt.key;
+                        moveOpts.d = new Date();
+                        panto = true;
+                    }else{
+                        moveOpts.key = evt.key;
+                    }
                 }
             }
         }
@@ -201,13 +255,13 @@
             }
         }
         setInterval(()=>{ // 플레이 w,a,s,d
-            const p = MOVE_PARAMS[moveOpts.key]
+            const p = MOVE_PARAMS[moveOpts.key];
             if(p != null){
                 if(+moveOpts.d + 500 < +new Date()){
-                    peopleX += p.vx
-                    peopleY += p.vy
+                    peopleX += p.vx;
+                    peopleY += p.vy;
                     moveLatLng = new kakao.maps.LatLng(peopleX, peopleY);
-                    people1.setPosition(moveLatLng)
+                    people.setPosition(moveLatLng);
                     map.setCenter(moveLatLng);
                 }
             }
@@ -222,6 +276,9 @@
             }
         }, 50)
 
+        setInterval(()=>{
+
+        }, 50)
     </script>
 </body>
 </html>
