기본기능 완료

--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,9 @@
                     </div>
                 </div>
                 <div style="display: flex; align-items: center;">
-                    <div class="Peopleshow" id="P_showbox">
+                    <div class="Peopleshow" id="S_showbox">
                         👤
-                        <div id="P_show"></div>
+                        <div id="S_show"></div>
                         <!-- 감염대상자(사람수) -->
                     </div>
                     <div class="Peopleshow" id="I_showbox">
@@ -40,10 +40,15 @@
                         <div id="I_show"></div>
                         <!-- 감염자 -->
                     </div>
-                    <div class="Peopleshow" id="S_showbox">
+                    <div class="Peopleshow" id="R_showbox">
                         👤
                         <div id="R_show">0</div>
                         <!-- 회복자 -->
+                    </div>
+                    <div class="Peopleshow" id="D_showbox">
+                        💀
+                        <div id="D_show">0</div>
+                        <!-- 사망자 -->
                     </div>
                 </div>
             </div>
