병원 시스템 제작중

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="map"></div>
     
-    <div class="Capslock_alert">Capslock 이 켜져있습니다</div>
+    <div class="Warning_alert"></div>
     
     <div id="P_inf">0</div>
 
@@ -62,13 +62,13 @@
                         <div id="D_show">0</div>
                         <!-- 사망자 -->
                     </div>
-                    <div class="virus_infection">🦠</div>
+                    <div id="virus_infection">🦠</div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="mylocate">▾</div>
+    <div class="mylocate">Loading...</div>
 
     <div style="position: absolute; top: 0; left: 0;">
         <div class="mainMenu"></div>
